--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     jcenter()
+    maven { url "https://dl.bintray.com/caarmen/maven/" }
 }
 
 sourceSets {
@@ -31,7 +32,6 @@ sourceSets {
         groovy.srcDirs = [file('src/test/groovy')]
     }
 }
-
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
@@ -43,7 +43,11 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
     testCompile('org.spockframework:spock-core:1.1-groovy-2.4-rc-2')
-
+    compile("com.google.guava:guava:29.0-jre")
     compile('com.opencsv:opencsv:5.2')
-    compile('net.e175.klaus:solarpositioning:0.0.9')
+    compile('ca.rmen:lib-sunrise-sunset:1.1.1')
+//    compile('net.e175.klaus:solarpositioning:0.0.9')
+//    compile('net.time4j:time4j-base:5.6')
+//    compile('net.time4j:time4j-sqlxml:5.6')
+//    compile('net.time4j:time4j-tzdata:5.0-2020a')
 }
