--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
-spring.jpa.show_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.h2.console.enabled=true
+#spring.jpa.show_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.h2.console.enabled=true
+#
+#
+#spring.profiles.active= local
+#spring.profiles= local
+#spring.datasource.hikari.jdbc-url= jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.hikari.username= sa
+#spring.datasource.hikari.password=
+#spring.datasource.driver-class-name= org.h2.Driver
+#
+#spring.profiles= production
+#spring.datasource= mysql
+#spring.datasource.hikari.jdbc-url= jdbc:mysql://localhost:3306/spring_batch
+#spring.datasource.hikari.username= woo
+#spring.datasource.hikari.password= woo
+#spring.datasource.driver-class-name= com.mysql.jdbc.Driver
