--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile("com.google.guava:guava:29.0-jre")
     compile('com.opencsv:opencsv:5.2')
     compile('ca.rmen:lib-sunrise-sunset:1.1.1')
+    compile('org.springframework.boot:spring-boot-starter-batch')
 //    compile('net.e175.klaus:solarpositioning:0.0.9')
 //    compile('net.time4j:time4j-base:5.6')
 //    compile('net.time4j:time4j-sqlxml:5.6')
