--- a/build.gradle
+++ b/build.gradle
@@ -50,4 +50,10 @@ dependencies {
 //    compile('net.time4j:time4j-base:5.6')
 //    compile('net.time4j:time4j-sqlxml:5.6')
 //    compile('net.time4j:time4j-tzdata:5.0-2020a')
+
+
+    compile('org.springframework.boot:spring-boot-starter-batch')
+    compile('org.springframework.boot:spring-boot-starter-jdbc')
+    runtime('mysql:mysql-connector-java')
+    testCompile('org.springframework.batch:spring-batch-test')
 }
