--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
+//apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'groovy'
@@ -33,28 +34,46 @@ sourceSets {
     }
 }
 
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
+
 dependencies {
+    // SPRING
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.projectlombok:lombok')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-mustache')
-    compile('com.h2database:h2')
-    compile('org.mariadb.jdbc:mariadb-java-client')
+    compile('org.springframework.boot:spring-boot-starter-batch')
+    compile('org.springframework.boot:spring-boot-starter-logging')
+    // TEST
+    developmentOnly('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.batch:spring-batch-test')
     testCompile('org.springframework.security:spring-security-test')
     testCompile('org.spockframework:spock-core:1.1-groovy-2.4-rc-2')
+    // DB
+    compile('org.springframework.boot:spring-boot-starter-jdbc')
+    compile('mysql:mysql-connector-java:8.0.21')
+    compile('org.mariadb.jdbc:mariadb-java-client')
+    compile('com.h2database:h2')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+    // FRONT
+    compile('org.springframework.boot:spring-boot-starter-mustache')
+    // UTIL
+    compileOnly('org.projectlombok:lombok:1.18.10')
+    annotationProcessor('org.projectlombok:lombok:1.18.10')
     compile("com.google.guava:guava:29.0-jre")
-    compile('com.opencsv:opencsv:5.2')
-    compile('ca.rmen:lib-sunrise-sunset:1.1.1')
-    compile('org.springframework.boot:spring-boot-starter-batch')
+    compile("org.apache.commons:commons-lang3:3.0")
+//    compile('com.opencsv:opencsv:5.2')
+//    compile('ca.rmen:lib-sunrise-sunset:1.1.1')
+
 //    compile('net.e175.klaus:solarpositioning:0.0.9')
 //    compile('net.time4j:time4j-base:5.6')
 //    compile('net.time4j:time4j-sqlxml:5.6')
 //    compile('net.time4j:time4j-tzdata:5.0-2020a')
-
-
-    compile('org.springframework.boot:spring-boot-starter-batch')
-    compile('org.springframework.boot:spring-boot-starter-jdbc')
-    runtime('mysql:mysql-connector-java')
-    testCompile('org.springframework.batch:spring-batch-test')
+//    runtime('mysql:mysql-connector-java')
 }
+
+
