--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,29 @@
 spring:
   profiles:
     active: mysql
+#    include: prod
   jpa:
     show_sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+  server:
+    tomcat:
+      uri-encoding: UTF-8
+#mybatis:
+#  config-location: classpath:mybatis-config.xml
+
 ---
 spring:
-  profiles: local
+  profiles: h2
   datasource:
+#    schema: classpath*:db/${database}/schema.sql
+#    data: classpath*:db/${database}/data.sql
     hikari:
       jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
       username: sa
@@ -18,12 +32,28 @@ spring:
   h2:
     console:
       enabled: true
+  devtools:
+    livereload:
+      enabled: true
+    restart:
+      enabled: true
+  mustache:
+    cache: false
+    prefix: file:src/main/resources/templates/
 ---
 spring:
   profiles: mysql
   datasource:
     hikari:
-      jdbc-url: jdbc:mysql://localhost:3306/spring_batch?characterEncoding=UTF-8&serverTimezone=UTC
+      jdbc-url: jdbc:mysql://localhost:3306/addup?useSSL=true&verifyServerCertificate=false
       username: root
       password: root
       driver-class-name: com.mysql.cj.jdbc.Driver
+  devtools:
+    livereload:
+      enabled: true
+    restart:
+      enabled: true
+  mustache:
+    cache: false
+    prefix: file:src/main/resources/templates/
