--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     developmentOnly('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.batch:spring-batch-test')
-    testCompile('org.springframework.security:spring-security-test')
+//    testCompile('org.springframework.security:spring-security-test')
     testCompile('org.spockframework:spock-core:1.1-groovy-2.4-rc-2')
     // DB
     compile('org.springframework.boot:spring-boot-starter-jdbc')
@@ -58,7 +58,6 @@ dependencies {
     compile('org.mariadb.jdbc:mariadb-java-client')
     compile('com.h2database:h2')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
     // FRONT
     compile('org.springframework.boot:spring-boot-starter-mustache')
     // UTIL
