--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 spring:
   profiles:
-#    active: mysql
     include: prod
   jpa:
     show_sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.MariaDB10Dialect
   http:
     encoding:
       charset: UTF-8
@@ -15,6 +14,11 @@ spring:
   server:
     tomcat:
       uri-encoding: UTF-8
+  # program argument로 job.name이 설정되지 않으면 아무 배치도 실행하지 않는다
+  # --jab.name=<jobname> <parameter> 형식으로 사용
+  batch:
+    job:
+      names: ${job.name:NONE}
 ---
 spring:
   profiles: h2
