--- a/build.gradle
+++ b/build.gradle
@@ -50,11 +50,9 @@ dependencies {
     developmentOnly('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.batch:spring-batch-test')
-//    testCompile('org.springframework.security:spring-security-test')
     testCompile('org.spockframework:spock-core:1.1-groovy-2.4-rc-2')
     // DB
     compile('org.springframework.boot:spring-boot-starter-jdbc')
-    compile('mysql:mysql-connector-java:8.0.21')
     compile('org.mariadb.jdbc:mariadb-java-client')
     compile('com.h2database:h2')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -65,6 +63,9 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok:1.18.10')
     compile("com.google.guava:guava:29.0-jre")
     compile("org.apache.commons:commons-lang3:3.0")
+
+//    compile('mysql:mysql-connector-java:8.0.21')
+//    testCompile('org.springframework.security:spring-security-test')
 //    compile('com.opencsv:opencsv:5.2')
 //    compile('ca.rmen:lib-sunrise-sunset:1.1.1')
 
